User need to confirm his account with a mail after created it, improve the framework and fix a security flaw when creating a join demand

--- a/app/.gitignore
+++ b/app/.gitignore
@@ -8,7 +8,7 @@ package-lock.json
 /Services/*.js
 /Fixtures/*.js
 /Core/*.js
-!/Core/env.js
+!/Core/env.example.js
 /Medias/*
 !/Medias/.gitkeep
 /node_modules
