--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
     "express-fileupload": "^1.2.1",
     "express-session": "^1.17.1",
     "fs-extra": "^9.0.1",
+    "nodemailer": "^6.5.0",
     "path": "^0.12.7",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
